[gd_scene load_steps=4 format=3 uid="uid://c8k7m2p4n3xvy"]

[ext_resource type="Theme" uid="uid://ddjoduj1ya6tp" path="res://assets/5PFH.tres" id="1_bg0s"]
[ext_resource type="Script" path="res://Resources/CrewAndCharacters/CrewTaskUI.gd" id="2_task"]
[ext_resource type="Texture2D" uid="uid://bnalp0hnpiwx" path="res://assets/Basic assets/5PFHUIAssets/Sci-Fi-Infoboxes_0000s_0004s_0001_main.png" id="3_bg"]

[node name="CrewTasksPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bg0s")
script = ExtResource("2_task")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Background" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_bg")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Crew Tasks"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CrewLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
text = "Available Crew Members"

[node name="CrewList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TaskLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
text = "Available Tasks"

[node name="TaskAssignment" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="TaskDescriptionLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Select a task to see its description..."

[node name="SkillInfoLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
bbcode_enabled = true

[node name="ResultLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResolveTask" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Resolve Task"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Back"
